# typhoon-asr-with-nextjs

./: README.md  api.py  main.py  pyproject.toml  requirements.txt
web/: package-lock.json  package.json
web/app/: page.tsx
