[project]
name = "typhoon-asr-demo"
version = "0.1.0"
description = "A Next.js and FastAPI demo for Typhoon ASR - Thai speech recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "typhoon-asr",
    "openai",
    "pydub",
    "numpy"
]
